# fast_net

./: .env  CMakeLists.txt  README.md  exp.py  exp_client.py  exp_server.py  plot.py  plot2.py
results/: small_grid_max_e2e_c7gn_nv.csv
src/: buffer_pool.hpp  client.cpp  client_iou.cpp  consts.h  consts.hpp  max_client.cpp  max_server.cpp  memory_block.h  memory_block.hpp  server.cpp  server_iou.cpp  simple_consts.hpp  simple_iou_client.cpp  simple_iou_server.cpp  simple_server.cpp  static_config.h  static_config.hpp  utils.hpp
src/models/: get_page.h  get_page.hpp
